samples/_failures_safe/1761303618_91f7ae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_882cc6b3.c: In function ‘main’:
./samples/SAFE/__tmp_882cc6b3.c:150:9: error: expected declaration or statement at end of input
  150 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_882cc6b3.c:150:9: error: expected declaration or statement at end of input
